<resources>
    <string name="app_name"> Have a Nice Trip </string>
    <string name="action_settings"> Settings </string>
    <string name="login"> Usuário </string>
    <string name="senha"> Senha </string>
    <string name="entra"> Entrar ! </string>
    <string name="erro_autenticacao"> Usuário ou Senha Errados ! </string>
    <string name="novos_gatos"> Novos Gastos </string>
    <string name="nova_viagem"> Novo Viagem </string>
    <string name="minhas_viagens"> Minhas Viagens </string>
    <string name="configuracoes"> Configurações </string>
    <string name="title_activity_viagem"> Nova Viagem </string>
    <string name="destino"> Destino </string>
    <string name="tipo_de_viagem">Tipo De Viagem</string>
    <string name="lazer">Lazer</string>
    <string name="negocios">Negócios</string>
    <string name="title_activity_viagem_">Viagem_Activity</string>
    <string name="data_da_chegada">Data de Chegada</string>
    <string name="data_da_saida"> Data de Saída</string>
    <string name="selecione">Selecionar</string>
    <string name="orcamento"> Orçamento </string>
    <string name="quantidade_de_pessoa"> Quantidade De Pessoas </string>
    <string name="salvar"> Salvar </string>
    <string name="title_activity_gasto">Novo Gasto</string>
    <string name="categoria">Categoria</string>
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="descricao">Descrição</string>
    <string name="local"> Local </string>
    <string name="gastei">Gastei !</string>
    <string-array name="categoria_gasto">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>
    <string name="title_activity_viagem_list">ViagemListActivity</string>
    <string name="title_activity_gasto_list">GastoListActivity</string>
    <string name="editar"> Editar </string>
    <string name="novo_gasto"> Novo gasto </string>
    <string name="gastos_realizados"> Gastos realizados</string>
    <string name="remover"> Remover </string>
    <string name="opcoes"> Opções </string>
    <string name="confirmacao_exclusao_viagem"> Exclusão viagem </string>
    <string name="sim"> Sim </string>
    <string name="nao"> Não </string>


</resources>
