<?xml version="3.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".NiceTripActivity"
    >
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoria" />

            <Spinner
                android:id="@+id/categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/categoria" >
            </Spinner>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1">

                <TableRow>
                    <EditText
                        android:id="@+id/valor"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_height="50dp"
                        android:background="@drawable/new_design_edittext"
                        android:inputType="numberDecimal"
                        android:hint="@string/valor"
                        />
                    <Button
                        android:id="@+id/data"
                        android:layout_gravity="center"
                        android:onClick="selecionarData"
                        android:text="@string/data"
                        android:background="@color/Butom"
                        android:layout_marginTop="10dp"
                        />
                </TableRow>

            </TableLayout>

            <EditText
                android:id="@+id/descricao"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="50dp"
                android:hint="@string/descricao"
                android:background="@drawable/new_design_edittext"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/local"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="50dp"
                android:hint="@string/local"
                android:background="@drawable/new_design_edittext"
                android:inputType="text"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="registrarGasto"
                android:text="@string/gastei"
                android:background="@color/Butom"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>