<?xml version="3.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NiceTripActivity"
    android:background="@drawable/background"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <TextView
        android:id="@+id/novo_gasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="80dp"
        android:clickable="true"
        android:drawableTop="@drawable/novos_gatos"
        android:onClick="selecionarOpcao"
        android:text="@string/novos_gatos"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/nova_viagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/novo_gasto"
        android:layout_marginRight="50dp"
        android:clickable="true"
        android:drawableTop="@drawable/novas_viagens"
        android:onClick="selecionarOpcao"
        android:text="@string/nova_viagem"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/minhas_viagens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/novo_gasto"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:clickable="true"
        android:drawableTop="@drawable/minhas_viagens"
        android:onClick="selecionarOpcao"
        android:text="@string/minhas_viagens"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/configuracoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/minhas_viagens"
        android:layout_alignRight="@id/nova_viagem"
        android:clickable="true"
        android:drawableTop="@drawable/configuracao"
        android:onClick="selecionarOpcao"
        android:text="@string/configuracoes"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        />
    </RelativeLayout>

</LinearLayout>
